# learn-recursive-filters

./: .gitignore  .gitmodules  .tmp_reorg_synth.zsh  README.md  pyproject.toml  reorganize_shared_for_analyze_edr.zsh
config/: loss_profile_fig10_cpu.yml  loss_profile_fig11_cpu.yml  loss_profile_fig11_gpu.yml  loss_profile_fig8_cpu.yml  loss_profile_fig9_cpu.yml  loss_profile_perturbation.yml  loss_surface_gpu.yml  notebook_target_validation.yml  optimization_cpu.yml  optimization_real_data_cpu.yml  optimization_real_data_gpu.yml  optimization_real_data_synth_noise_cpu.yml  optimization_real_data_synth_noise_gpu.yml
matlab/: analyze_edr_differences.m  analyze_representations.m  plot_loss_surface.m  plots_all_real_rir_analysis.m  plots_losses_analysis.m  plots_perturbation_analysis.m  plots_real_rir_analysis.m  plots_real_rir_analysis_2.m
real_rirs/: extract_direct.m  plot_analysis.m
src/: config.py  fdn.py  losses.py  target.py  test_loss_profile.py  test_loss_surface.py  test_optimization.py  test_optimization_real_data.py  utils.py
